# simd_game

./: .gitignore  CMakeLists.txt  Convolution.cpp  README.md  bit_count.c  checksum.c  convolution.c  crc_cal.c  simd_matrix_mul.c
abs_val/: abs_val.c
bit_count/: bit_count.c
checksum/: checksum.c
circular_shift/: circular_shift.c
crc_calc/: crc_cal.c
endian/: endian.c
fft/: dtft.c
pow/: pow.c
power_of_two/: power_of_two.c
reverse_bits/: reverse_bits.c
same_sign/: same_sign.c
simd_matrix_ops/: mat_mul.c  simd_matrix_mul.c
swap_bits/: swap_bits.c
unit_tests/: README.md  verify_dtft.py
